cabal-version: 1.12

name:           advent2018
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/rkaippully/advent2018#readme>
homepage:       https://github.com/githubuser/advent2018#readme
bug-reports:    https://github.com/githubuser/advent2018/issues
author:         Raghu Kaippully
maintainer:     rkaippully@gmail.com
copyright:      2018 Raghu Kaippully
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/rkaippully/advent2018

executable advent2018
  main-is: Main.hs
  hs-source-dirs:
      src
  other-modules:
      Day1
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
  default-language: Haskell2010